# orc_game

./: CMakeLists.txt  Info.plist  README.md  build.sh
a.dSYM/Contents/Resources/DWARF/: a
headers/: Enemy.h  Entity.h  Player.h  TmxLevel.h  fire.h  healthBar.h  items.h  key.h  light.h  menu.h  startGame.h  trap.h  view.h
image/map/: map.tmx
src/: Enemy.cpp  Entity.cpp  Player.cpp  TmxLevel.cpp  fire.cpp  healthBar.cpp  items.cpp  key.cpp  main.cpp  menu.cpp  startGame.cpp  trap.cpp  view.cpp
src/a.dSYM/Contents/Resources/DWARF/: a
statistics/: LICENSE  statistics.txt
